# PokemonFleet

./: .gitignore  POKEMON_CONTEXT.md  README.md
.github/workflows/: build-windows.yml
PokemonFleet/: .gitignore  README.md  package-lock.json  package.json
PokemonFleet/assets/: Pokemon_Config.template.txt
PokemonFleet/src-tauri/: Cargo.toml  check_out.txt  tauri.conf.json
PokemonFleet/src-tauri/binaries/: .gitignore
PokemonFleet/src-tauri/capabilities/: default.json
PokemonFleet/src-tauri/icons/: icon.icns
PokemonFleet/src-tauri/src/: bootstrap.rs  lib.rs  main.rs  utils.rs
PokemonFleet/src-tauri/src/device/: api.rs  mod.rs  registry.rs  tunnel.rs  watcher.rs
PokemonFleet/src-tauri/src/fleet/: commands.rs  log_stream.rs  mod.rs
PokemonFleet/src-tauri/src/license/: mod.rs  verifier.rs
PokemonFleet/src-tauri/src/mail_server/: commands.rs  config.rs  http_api.rs  imap_poller.rs  mod.rs
PokemonFleet/src-tauri/src/storage/: mod.rs  schema.sql  store.rs
PokemonFleet/ui/: data-manager.html  index.html  screen-grid.html
PokemonFleet/ui/js/: api.js  app.js  utils.js
PokemonFleet/ui/js/components/: BootstrapWizard.js  ConfigDialog.js  DataManager.js  DataViewer.js  DeviceTable.js  IdeEmbed.js  LogModal.js  MailServer.js  ScreenGridView.js  ScreenView.js  ScriptPicker.js
PokemonFleet/ui/styles/: main.css  theme.css
pokemon-worker/: package.json  schema.sql  wrangler.toml
pokemon-worker/migrations/: 001_fleet_licenses.sql
pokemon-worker/src/: admin.html  landing.html  worker.js
scripts/: HUONG_DAN.txt  PokemonLoader.lua  PokemonLoader.lue  RegisterPokemon.lua  VIPPokemon.lua
scripts/server/: config.json  server.py
scripts/server-side/: README.md  mock_server.py  pokemon_register.lua  pokemon_vip.lua
scripts/server-side/scripts/: pokemon_vip.lua
scripts/tools/: ic_encrypt.py
